fix: wrapping tag row in contact box

--- a/src/components/sections/contact-box/contact-box.module.css
+++ b/src/components/sections/contact-box/contact-box.module.css
@@ -23,6 +23,10 @@
   border-radius: var(--radius-small);
   background: var(--_contactBox__background);
   color: var(--_contactBox__color);
+
+  @media (max-width: 400px) {
+    padding: 1rem 1rem;
+  }
 }
 .contactBox__inner--light {
   --_contactBox__background: var(--background-bg-light-secondary);
@@ -53,7 +57,8 @@
 .tagList {
   display: flex;
   flex-direction: column;
-  gap: 0.75rem;
+  gap: var(--padding-s);
+  flex-wrap: wrap;
 
   align-items: flex-start;
   min-width: 120px;
